crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_multiple_elements-2.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
