crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_multiple_elements-4.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 1,
            length: 3,
        },
        help: None,
        err_type: ExpectedAny(
            [
                "the beginning of an element",
                "a JavaScript expression",
                "plain text",
            ],
        ),
    },
)
