crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_multiple_elements-5.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: nodes(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 17,
            line: 1,
            fragment: "",
            extra: (),
        },
        [
            Node {
                metadata: Location {
                    offset: 0,
                    length: 8,
                    line: 1,
                    column: 1,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [],
                        children: [],
                    },
                ),
            },
            Node {
                metadata: Location {
                    offset: 8,
                    length: 9,
                    line: 1,
                    column: 9,
                },
                node_type: Comment(
                    " hello!",
                ),
            },
        ],
    ),
)
