crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_scripts-2.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse_code_blocks(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 34,
            line: 1,
            fragment: "",
            extra: (),
        },
        (
            None,
            Some(
                Css {
                    rules: [
                        Regular(
                            RegularRule {
                                selector: Selector {
                                    parts: [
                                        SelectorPart {
                                            text: Some(
                                                "body",
                                            ),
                                            pseudoes: [],
                                        },
                                    ],
                                },
                                declarations: [
                                    Declaration {
                                        name: "height",
                                        values: [
                                            Css(
                                                "100vh",
                                            ),
                                        ],
                                    },
                                ],
                            },
                        ),
                    ],
                },
            ),
            None,
        ),
    ),
)
