crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_special_blocks-2.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 0,
                    length: 48,
                    line: 1,
                    column: 1,
                },
                node_type: SpecialBlock(
                    For(
                        ForBlock {
                            binding: "elem",
                            index: Some(
                                "idx",
                            ),
                            expr: EXPR_STMT@0..9
                              ARRAY_EXPR@0..9
                                L_BRACK@0..1 "["
                                LITERAL@1..2
                                  NUMBER@1..2 "1"
                                COMMA@2..3 ","
                                WHITESPACE@3..4 " "
                                LITERAL@4..5
                                  NUMBER@4..5 "2"
                                COMMA@5..6 ","
                                WHITESPACE@6..7 " "
                                LITERAL@7..8
                                  NUMBER@7..8 "3"
                                R_BRACK@8..9 "]"
                            ,
                            inner: [
                                Node {
                                    metadata: Location {
                                        offset: 30,
                                        length: 12,
                                        line: 1,
                                        column: 31,
                                    },
                                    node_type: Element(
                                        Element {
                                            tag: "p",
                                            attrs: [],
                                            children: [
                                                Node {
                                                    metadata: Location {
                                                        offset: 33,
                                                        length: 6,
                                                        line: 1,
                                                        column: 34,
                                                    },
                                                    node_type: Text(
                                                        Text(
                                                            "hello",
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
    },
)
