crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_special_blocks-3.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 2,
                    length: 42,
                },
                node_type: SpecialBlock(
                    If(
                        IfBlock {
                            expr: EXPR_STMT@0..6
                              BIN_EXPR@0..6
                                NAME_REF@0..1
                                  IDENT@0..1 "x"
                                WHITESPACE@1..2 " "
                                EQ2@2..4 "=="
                                WHITESPACE@4..5 " "
                                LITERAL@5..6
                                  NUMBER@5..6 "3"
                            ,
                            inner: [
                                Node {
                                    metadata: Location {
                                        offset: 14,
                                        length: 10,
                                    },
                                    node_type: Element(
                                        Element {
                                            tag: "p",
                                            attrs: [],
                                            children: [
                                                Node {
                                                    metadata: Location {
                                                        offset: 15,
                                                        length: 8,
                                                    },
                                                    node_type: Text(
                                                        Text(
                                                            "hello",
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                            else_block: Some(
                                [
                                    Node {
                                        metadata: Location {
                                            offset: 32,
                                            length: 9,
                                        },
                                        node_type: Text(
                                            Text(
                                                "hello",
                                            ),
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
