crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_special_blocks-4.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 0,
                    length: 44,
                    line: 1,
                    column: 1,
                },
                node_type: SpecialBlock(
                    If(
                        IfBlock {
                            expr: EXPR_STMT@1..7
                              BIN_EXPR@1..7
                                NAME_REF@1..2
                                  IDENT@1..2 "x"
                                WHITESPACE@2..3 " "
                                EQ2@3..5 "=="
                                WHITESPACE@5..6 " "
                                LITERAL@6..7
                                  NUMBER@6..7 "3"
                            ,
                            inner: [
                                Node {
                                    metadata: Location {
                                        offset: 13,
                                        length: 12,
                                        line: 1,
                                        column: 14,
                                    },
                                    node_type: Element(
                                        Element {
                                            tag: "p",
                                            attrs: [],
                                            children: [
                                                Node {
                                                    metadata: Location {
                                                        offset: 16,
                                                        length: 6,
                                                        line: 1,
                                                        column: 17,
                                                    },
                                                    node_type: Text(
                                                        Text(
                                                            "hello",
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                            else_block: Some(
                                [
                                    Node {
                                        metadata: Location {
                                            offset: 33,
                                            length: 6,
                                            line: 1,
                                            column: 34,
                                        },
                                        node_type: Text(
                                            Text(
                                                "hello ",
                                            ),
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
    },
)
